# vlk

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/vlk/: CMakeLists.txt
lib/vlk/include/vlk/: application.h  exception.h  final.h  log.h  phys_device.h  util.h
lib/vlk/src/: application.cpp  dbg_print.h  dummy.cpp  log.cpp  phys_device.cpp  util.cpp  vulkan-bindings.cpp  vulkan-bindings.h
licenses/: glfw
test/utest/: CMakeLists.txt
test/utest/log/: test-log.cpp
test/utest/utility/: test-final.cpp  test-log.cpp
test/vlk-app-1/: CMakeLists.txt
test/vlk-app-1/src/: main.cpp
